# tarkov-squad-guide

./: CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
scripts/: precompute-icons.mjs  rasterize-icon.mjs
src/: DesktopApp.jsx  TarkovGuide.backup.jsx  TarkovGuide.jsx  constants.js  main.jsx  theme.js
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  log_watcher.rs  scanner.rs
src/components/: ErrorBoundary.jsx  LogWatcherSection.jsx  PriceSearch.jsx  ScannerPopout.jsx  TaskMapPopout.jsx  TaskScannerModal.jsx  WelcomeBanner.jsx
src/hooks/: useCopyToClipboard.js  useDebounce.js  useIconIndex.js  useProfileCloudSync.js  useScanAndFetch.js  useSquadRoom.js
src/lib/: buildOptimizer.js  buildOptimizer.test.js  fuzzyMatch.js  fuzzyMatch.test.js  iconHash.js  taskScanUtils.js  taskScanUtils.test.js  taskUtils.js  tauri.js  utils.js  utils.test.js
src/tabs/: BuildsTab.jsx  IntelTab.jsx  ProfileTab.jsx  RaidTab.jsx  TasksTab.jsx
supabase/migrations/: 20260422_user_profiles.sql
