[package]
name = "tarkov-guide"
version = "0.6.9"
description = "Tarkov PvE Squad Guide — Desktop Overlay"
authors = ["Matt"]
edition = "2021"

[lib]
name = "tarkov_guide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screenshots = "0.8"
windows = { version = "0.61", features = [
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
    "Globalization",
] }
